@@ -1,3 +1,7 @@
+Feb 18, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
+- fix use of wrong server type when adding servers (#1143801, thanks roerich
+  and kracho for helping to debug this)
+
 Feb 05, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - make all icons themeable
 - make yellow man actually yellow instead of green
